--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "private": true,
   "devDependencies": {
+    "angular": "^1.4.8",
+    "angular-route": "^1.4.8",
+    "bootstrap": "^3.3.6",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.1.1",
+    "jquery-latest": "^1.9.0",
     "laravel-elixir": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
