--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.1.1",
     "jquery-latest": "^1.9.0",
-    "laravel-elixir": "^2.0.0"
+    "laravel-elixir": "^2.0.0",
+    "angular-ui-router": "^0.2.15"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
